--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Landing Page</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    </head>
-    <body>
-        <!--NAVIGATION BAR-->
-        <nav id="menu">
-            <div id="menu-div">
-            <a href="#about"><p class="menu-link">Features</p></a>
-            <a href=""><p class="menu-link">How It Works</p></a>
-            <a href=""><p class="menu-link">Pricing</p></a>
-            
-            </div>
-        </nav>
-        <main>
-            
-        </main>
-    </body>
+<!doctype html>
+ 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+ 
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+ 
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+ 
+  <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+ 
+<body>
+  <script src="js/scripts.js"></script>
+</body>
 </html>
